--- a/static/news.css
+++ b/static/news.css
@@ -13,7 +13,7 @@ textarea { font-family:monospace; font-size:10pt; resize:both; }
 }
 
 .input {
-  font-family: inherit;
+  font-family: monospace;
   font-size: inherit;
   padding: 0px;
   margin: 0px;
